<resources>
    <string name="app_name">CokeSFA</string>
    <string name="login">LOGIN</string>
    <string name="i_accept_to_the_terms_and_conditions">I accept to the terms and conditions</string>
    <string name="password">Password</string>
    <string name="sales_force_automation">Sales Force Automation</string>
    <string name="email">Email</string>
    <string name="this_week_s_sale">This month\'s top seller</string>
    <string name="john_doe">John Doe</string>
    <string name="cumilla">Cumilla</string>
    <string name="total_5_orders">Total 5 orders</string>
    <string name="your_score">Your score</string>
    <string name="know_more">Know more. . .</string>
    <string name="visit_website">Visit website</string>
    <string name="psr_policy">PSR Policy</string>
    <string name="want_to_know_more_about_your_goals_check_out_the">Want to know more about your goals? Check out the
    </string>
    <string name="you_must_fulfil_your_goal">You must fulfil your goal otherwise your rating from the Central Distribution Unit will be decreased. This is important for a PSR that he has to complete at least 10 successful orders in a month</string>
</resources>
