<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="408dp"
                android:layout_height="220dp"
                android:src="@drawable/login_logo"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/imageView"/>


        <TextView
            android:id="@+id/textView"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/sales_force_automation"
            android:textAlignment="center"
            android:textColor="@color/colorLightDark"
            android:textStyle="bold"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <AutoCompleteTextView
                android:id="@+id/txtLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:drawableLeft="@drawable/ic_profile"
                android:drawablePadding="8dp"
                android:layout_margin="32dp"
                tools:layout_editor_absoluteX="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="Email"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:drawableStart="@drawable/ic_profile"/>

        <AutoCompleteTextView
                android:id="@+id/txtLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:padding="16dp"
                android:layout_margin="32dp"
                tools:layout_editor_absoluteX="32dp"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/password"
                app:layout_constraintTop_toBottomOf="@+id/txtLoginEmail"/>


        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_accept_to_the_terms_and_conditions"
                android:textColor="@color/colorLightDark"
                android:padding="8dp"
                android:layout_margin="32dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword"
                android:id="@+id/checkBox"
                tools:layout_editor_absoluteX="32dp"/>



        <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/login"
                android:textSize="24sp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="#29b6f6"
                android:textColor="@color/colorOffWhite"
                tools:layout_editor_absoluteX="32dp"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>