<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">


    <android.support.v7.widget.CardView
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:layout_width="360dp"
            android:layout_height="180dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/cardBackgroundColor"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cardTopSeller">


        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLightDark"
                    android:text="@string/this_week_s_sale"
                    android:textSize="28sp"
                    android:paddingLeft="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/textView3"
                    android:paddingStart="12dp"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorLightDark"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/view"/>

            <TextView
                    android:id="@+id/txtTopSellerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:textColor="@color/colorLightDark"
                    android:text="@string/john_doe"
                    android:textAlignment="center"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cumilla"
                    android:textColor="@color/colorLightDark"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtTopSellerName"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/textView4"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_5_orders"
                    android:textColor="@color/colorLightDark"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"/>


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:backgroundTint="@color/cardBackgroundColor"
            app:cardElevation="4dp"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/cardTopSeller"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="24dp"
            android:id="@+id/cardYourScore">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_score"
                    android:paddingLeft="8dp"
                    android:textSize="14dp"
                    android:paddingTop="8dp"
                    android:textColor="@color/colorLightDark"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"/>

            <ProgressBar
                    android:id="@+id/yourProgress"
                    android:layout_below="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:max="100"
                    android:progress="60"
                    style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                    tools:ignore="InvalidId"/>

            <TextView
                    android:id="@+id/txtProgress"
                    android:layout_below="@id/yourProgress"
                    android:text="60%"
                    android:paddingLeft="8dp"
                    android:textColor="@color/colorLightDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <TextView
                    android:id="@+id/txtKnowMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorLightDark"
                    android:textSize="20dp"
                    android:layout_margin="8dp"
                    android:text="@string/know_more"
                    android:layout_below="@id/txtProgress"/>

            <ImageView
                    android:layout_below="@+id/txtKnowMore"
                    android:layout_centerInParent="true"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_chevron_down"
                    />


        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/cardVisitSite"
            android:foreground="?selectableItemBackground"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:backgroundTint="@color/cardBackgroundColor"
            app:cardElevation="4dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/cardTopSeller">
        
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <ImageView
                    android:id="@+id/icLogo"
                    android:layout_width="90sp"
                    android:layout_height="90sp"
                    android:src="@drawable/ic_logo_round"
                    android:layout_marginTop="12dp"
                    android:layout_centerHorizontal="true"/>

            <TextView
                    android:text="@string/visit_website"
                    android:paddingLeft="8dp"
                    android:layout_below="@id/icLogo"
                    android:textSize="20dp"
                    android:paddingTop="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorLightDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </RelativeLayout>
        
        

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
            android:layout_width="360dp"
            android:layout_height="120dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            android:backgroundTint="@color/colorGreen"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/cardYourScore">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/want_to_know_more_about_your_goals_check_out_the"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:textColor="@color/colorOffWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/textView2"/>

            <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/colorOffWhite"
                    android:text="@string/psr_policy"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>